--- a/src/main/asciidoc/js/shareddata.adoc
+++ b/src/main/asciidoc/js/shareddata.adoc
@@ -8,11 +8,11 @@ asynchronous cluster-wide counters.
 
 === Local shared maps
 
-`link:../../jsdoc/local_map-LocalMap.html[Local shared maps]` allow you to share data safely between different event
+`link:../../jsdoc/module-vertx-js_local_map-LocalMap.html[Local shared maps]` allow you to share data safely between different event
 loops (e.g. different verticles) in the same Vert.x instance.
 
 Local shared maps only allow certain data types to be used as keys and values. Those types must either be immutable,
-or certain other types that can be copied like `link:../../jsdoc/buffer-Buffer.html[Buffer]`. In the latter case the key/value
+or certain other types that can be copied like `link:../../jsdoc/module-vertx-js_buffer-Buffer.html[Buffer]`. In the latter case the key/value
 will be copied before putting it in the map.
 
 This way we can ensure there is no _shared access to mutable state_ between different threads in your Vert.x application
@@ -54,8 +54,8 @@ other node.
 This makes them really useful for things like storing session state in a farm of servers hosting a Vert.x web
 application.
 
-You get an instance of `link:../../jsdoc/async_map-AsyncMap.html[AsyncMap]` with
-`link:../../jsdoc/shared_data-SharedData.html#getClusterWideMap[getClusterWideMap]`.
+You get an instance of `link:../../jsdoc/module-vertx-js_async_map-AsyncMap.html[AsyncMap]` with
+`link:../../jsdoc/module-vertx-js_shared_data-SharedData.html#getClusterWideMap[getClusterWideMap]`.
 
 Getting the map is asynchronous and the result is returned to you in the handler that you specify. Here's an example:
 
@@ -77,7 +77,7 @@ sd.getClusterWideMap("mymap", function (res, res_err) {
 
 ==== Putting data in a map
 
-You put data in a map with `link:../../jsdoc/async_map-AsyncMap.html#put[put]`.
+You put data in a map with `link:../../jsdoc/module-vertx-js_async_map-AsyncMap.html#put[put]`.
 
 The actual put is asynchronous and the handler is notified once it is complete:
 
@@ -97,7 +97,7 @@ map.put("foo", "bar", function (resPut, resPut_err) {
 
 ==== Getting data from a map
 
-You get data from a map with `link:../../jsdoc/async_map-AsyncMap.html#get[get]`.
+You get data from a map with `link:../../jsdoc/module-vertx-js_async_map-AsyncMap.html#get[get]`.
 
 The actual get is asynchronous and the handler is notified with the result some time later
 
@@ -120,24 +120,24 @@ map.get("foo", function (resGet, resGet_err) {
 
 You can also remove entries from an asynchronous map, clear them and get the size.
 
-See the `link:../../jsdoc/async_map-AsyncMap.html[API docs]` for more information.
+See the `link:../../jsdoc/module-vertx-js_async_map-AsyncMap.html[API docs]` for more information.
 
 === Cluster-wide locks
 
-`link:../../jsdoc/lock-Lock.html[Cluster wide locks]` allow you to obtain exclusive locks across the cluster -
+`link:../../jsdoc/module-vertx-js_lock-Lock.html[Cluster wide locks]` allow you to obtain exclusive locks across the cluster -
 this is useful when you want to do something or access a resource on only one node of a cluster at any one time.
 
 Cluster wide locks have an asynchronous API unlike most lock APIs which block the calling thread until the lock
 is obtained.
 
-To obtain a lock use `link:../../jsdoc/shared_data-SharedData.html#getLock[getLock]`.
+To obtain a lock use `link:../../jsdoc/module-vertx-js_shared_data-SharedData.html#getLock[getLock]`.
 
-This won't block, but when the lock is available, the handler will be called with an instance of `link:../../jsdoc/lock-Lock.html[Lock]`,
+This won't block, but when the lock is available, the handler will be called with an instance of `link:../../jsdoc/module-vertx-js_lock-Lock.html[Lock]`,
 signifying that you now own the lock.
 
 While you own the lock no other caller, anywhere on the cluster will be able to obtain the lock.
 
-When you've finished with the lock, you call `link:../../jsdoc/lock-Lock.html#release[release]` to release it, so
+When you've finished with the lock, you call `link:../../jsdoc/module-vertx-js_lock-Lock.html#release[release]` to release it, so
 another caller can obtain it.
 
 [source,js]
@@ -181,9 +181,9 @@ sd.getLockWithTimeout("mylock", 10000, function (res, res_err) {
 
 It's often useful to maintain an atomic counter across the different nodes of your application.
 
-You can do this with `link:../../jsdoc/counter-Counter.html[Counter]`.
+You can do this with `link:../../jsdoc/module-vertx-js_counter-Counter.html[Counter]`.
 
-You obtain an instance with `link:../../jsdoc/shared_data-SharedData.html#getCounter[getCounter]`:
+You obtain an instance with `link:../../jsdoc/module-vertx-js_shared_data-SharedData.html#getCounter[getCounter]`:
 
 [source,js]
 ----
@@ -200,4 +200,4 @@ sd.getCounter("mycounter", function (res, res_err) {
 Once you have an instance you can retrieve the current count, atomically increment it, decrement and add a value to
 it using the various methods.
 
-See the `link:../../jsdoc/counter-Counter.html[API docs]` for more information.
+See the `link:../../jsdoc/module-vertx-js_counter-Counter.html[API docs]` for more information.
