--- a/src/main/asciidoc/dataobjects.adoc
+++ b/src/main/asciidoc/dataobjects.adoc
@@ -1,5 +1,74 @@
 = Cheatsheets
 
+[[AddressResolverOptions]]
+== AddressResolverOptions
+
+++++
+ Configuration options for Vert.x hostname resolver. The resolver uses the local <i>hosts</i> file and performs
+ DNS <i>A</i> and <i>AAAA</i> queries.
+++++
+'''
+
+[cols=">25%,^25%,50%"]
+[frame="topbot"]
+|===
+^|Name | Type ^| Description
+|[[cacheMaxTimeToLive]]`cacheMaxTimeToLive`|`Number (int)`|
++++
+Set the cache maximum TTL value in seconds. After successful resolution IP addresses are cached with their DNS response TTL,
+ use this to set a maximum value to all responses TTL.
++++
+|[[cacheMinTimeToLive]]`cacheMinTimeToLive`|`Number (int)`|
++++
+Set the cache minimum TTL value in seconds. After resolution successful IP addresses are cached with their DNS response TTL,
+ use this to set a minimum value to all responses TTL.
++++
+|[[cacheNegativeTimeToLive]]`cacheNegativeTimeToLive`|`Number (int)`|
++++
+Set the negative cache TTL value in seconds. After a failed hostname resolution, DNS queries won't be retried
+ for a period of time equals to the negative TTL. This allows to reduce the response time of negative replies
+ and reduce the amount of messages to DNS servers.
++++
+|[[hostsPath]]`hostsPath`|`String`|
++++
+Set the path of an alternate hosts configuration file to use instead of the one provided by the os.
+ <p/>
+ The default value is null, so the operating system hosts config is used.
++++
+|[[hostsValue]]`hostsValue`|`Buffer`|
++++
+Set an alternate hosts configuration file to use instead of the one provided by the os.
+ <p/>
+ The value should contain the hosts content literaly, for instance <i>127.0.0.1 localhost</i>
+ <p/>
+ The default value is null, so the operating system hosts config is used.
++++
+|[[maxQueries]]`maxQueries`|`Number (int)`|
++++
+Set the maximum number of queries when an hostname is resolved.
++++
+|[[optResourceEnabled]]`optResourceEnabled`|`Boolean`|
++++
+Set to true to enable the automatic inclusion in DNS queries of an optional record that hints
+ the remote DNS server about how much data the resolver can read per response.
++++
+|[[queryTimeout]]`queryTimeout`|`Number (long)`|
++++
+Set the query timeout in milliseconds, i.e the amount of time after a query is considered to be failed.
++++
+|[[rdFlag]]`rdFlag`|`Boolean`|
++++
+Set the DNS queries <i>Recursion Desired</i> flag value.
++++
+|[[servers]]`servers`|`Array of String`|
++++
+Set the list of DNS server addresses, an address is the IP  of the dns server, followed by an optional
+ colon and a port, e.g <code>8.8.8.8</code> or {code 192.168.0.1:40000}. When the list is empty, the resolver
+ will use the list of the system DNS server addresses from the environment, if that list cannot be retrieved
+ it will use Google's public DNS servers <code>"8.8.8.8"</code> and <code>"8.8.4.4"</code>.
++++
+|===
+
 [[Argument]]
 == Argument
 
@@ -80,15 +149,21 @@ Add an enabled SSL/TLS protocols
 Set the idle timeout, in seconds. zero means don't timeout.
  This determines if a connection will timeout and be closed if no data is received within the timeout.
 +++
+|[[jdkSslEngineOptions]]`jdkSslEngineOptions`|`link:dataobjects.html#JdkSSLEngineOptions[JdkSSLEngineOptions]`|-
 |[[keyStoreOptions]]`keyStoreOptions`|`link:dataobjects.html#JksOptions[JksOptions]`|
 +++
 Set the key/cert options in jks format, aka Java keystore.
++++
+|[[logActivity]]`logActivity`|`Boolean`|
++++
+Set to true to enabled network activity logging: Netty's pipeline is configured for logging on Netty's logger.
 +++
 |[[metricsName]]`metricsName`|`String`|
 +++
 Set the metrics name identifying the reported metrics, useful for grouping metrics
  with the same name.
 +++
+|[[openSslEngineOptions]]`openSslEngineOptions`|`link:dataobjects.html#OpenSSLEngineOptions[OpenSSLEngineOptions]`|-
 |[[pemKeyCertOptions]]`pemKeyCertOptions`|`link:dataobjects.html#PemKeyCertOptions[PemKeyCertOptions]`|
 +++
 Set the key/cert store options in pem format.
@@ -104,6 +179,10 @@ Set the key/cert options in pfx format.
 |[[pfxTrustOptions]]`pfxTrustOptions`|`link:dataobjects.html#PfxOptions[PfxOptions]`|
 +++
 Set the trust options in pfx format
++++
+|[[proxyOptions]]`proxyOptions`|`link:dataobjects.html#ProxyOptions[ProxyOptions]`|
++++
+Set proxy options for connections via CONNECT proxy (e.g. Squid) or a SOCKS proxy.
 +++
 |[[receiveBufferSize]]`receiveBufferSize`|`Number (int)`|
 +++
@@ -124,10 +203,6 @@ Set whether SO_linger keep alive is enabled
 |[[ssl]]`ssl`|`Boolean`|
 +++
 Set whether SSL/TLS is enabled
-+++
-|[[sslEngine]]`sslEngine`|`link:enums.html#SSLEngine[SSLEngine]`|
-+++
-Set to use SSL engine implementation to use.
 +++
 |[[tcpKeepAlive]]`tcpKeepAlive`|`Boolean`|
 +++
@@ -179,6 +254,10 @@ Set if the socket can receive broadcast packets
 +++
 Set if IP v6 should be used
 +++
+|[[logActivity]]`logActivity`|`Boolean`|
++++
+Set to true to enabled network activity logging: Netty's pipeline is configured for logging on Netty's logger.
++++
 |[[loopbackModeDisabled]]`loopbackModeDisabled`|`Boolean`|
 +++
 Set if loopback mode is disabled
@@ -227,6 +306,13 @@ Set the value of traffic class
 |[[codecName]]`codecName`|`String`|
 +++
 Set the codec name.
++++
+|[[headers]]`headers`|`String`|
++++
+Add a message header.
+ <p>
+ Message headers can be sent with any message and will be accessible with link
+ at the recipient.
 +++
 |[[sendTimeout]]`sendTimeout`|`Number (long)`|
 +++
@@ -371,10 +457,16 @@ Sets the host.
 Set the idle timeout, in seconds. zero means don't timeout.
  This determines if a connection will timeout and be closed if no data is received within the timeout.
 +++
+|[[jdkSslEngineOptions]]`jdkSslEngineOptions`|`link:dataobjects.html#JdkSSLEngineOptions[JdkSSLEngineOptions]`|-
 |[[keyStoreOptions]]`keyStoreOptions`|`link:dataobjects.html#JksOptions[JksOptions]`|
 +++
 Set the key/cert options in jks format, aka Java keystore.
 +++
+|[[logActivity]]`logActivity`|`Boolean`|
++++
+Set to true to enabled network activity logging: Netty's pipeline is configured for logging on Netty's logger.
++++
+|[[openSslEngineOptions]]`openSslEngineOptions`|`link:dataobjects.html#OpenSSLEngineOptions[OpenSSLEngineOptions]`|-
 |[[pemKeyCertOptions]]`pemKeyCertOptions`|`link:dataobjects.html#PemKeyCertOptions[PemKeyCertOptions]`|
 +++
 Set the key/cert store options in pem format.
@@ -422,10 +514,6 @@ Set whether SO_linger keep alive is enabled
 |[[ssl]]`ssl`|`Boolean`|
 +++
 Set whether SSL/TLS is enabled
-+++
-|[[sslEngine]]`sslEngine`|`link:enums.html#SSLEngine[SSLEngine]`|
-+++
-Set to use SSL engine implementation to use.
 +++
 |[[tcpKeepAlive]]`tcpKeepAlive`|`Boolean`|
 +++
@@ -480,61 +568,6 @@ Set the additional debug data
 |[[lastStreamId]]`lastStreamId`|`Number (int)`|
 +++
 Set the last stream id.
-+++
-|===
-
-[[HostnameResolverOptions]]
-== HostnameResolverOptions
-
-++++
- Configuration options for Vert.x hostname resolver. The resolver uses the local <i>hosts</i> file and performs
- DNS <i>A</i> and <i>AAAA</i> queries.
-++++
-'''
-
-[cols=">25%,^25%,50%"]
-[frame="topbot"]
-|===
-^|Name | Type ^| Description
-|[[cacheMaxTimeToLive]]`cacheMaxTimeToLive`|`Number (int)`|
-+++
-Set the cache maximum TTL value in seconds. After successful resolution IP addresses are cached with their DNS response TTL,
- use this to set a maximum value to all responses TTL.
-+++
-|[[cacheMinTimeToLive]]`cacheMinTimeToLive`|`Number (int)`|
-+++
-Set the cache minimum TTL value in seconds. After resolution successful IP addresses are cached with their DNS response TTL,
- use this to set a minimum value to all responses TTL.
-+++
-|[[cacheNegativeTimeToLive]]`cacheNegativeTimeToLive`|`Number (int)`|
-+++
-Set the negative cache TTL value in seconds. After a failed hostname resolution, DNS queries won't be retried
- for a period of time equals to the negative TTL. This allows to reduce the response time of negative replies
- and reduce the amount of messages to DNS servers.
-+++
-|[[maxQueries]]`maxQueries`|`Number (int)`|
-+++
-Set the maximum number of queries when an hostname is resolved.
-+++
-|[[optResourceEnabled]]`optResourceEnabled`|`Boolean`|
-+++
-Set to true to enable the automatic inclusion in DNS queries of an optional record that hints
- the remote DNS server about how much data the resolver can read per response.
-+++
-|[[queryTimeout]]`queryTimeout`|`Number (long)`|
-+++
-Set the query timeout in milliseconds, i.e the amount of time after a query is considered to be failed.
-+++
-|[[rdFlag]]`rdFlag`|`Boolean`|
-+++
-Set the DNS queries <i>Recursion Desired</i> flag value.
-+++
-|[[servers]]`servers`|`Array of String`|
-+++
-Set the list of DNS server addresses, an address is the IP  of the dns server, followed by an optional
- colon and a port, e.g <code>8.8.8.8</code> or {code 192.168.0.1:40000}. When the list is empty, the resolver
- will use the list of the system DNS server addresses from the environment, if that list cannot be retrieved
- it will use Google's public DNS servers <code>"8.8.8.8"</code> and <code>"8.8.4.4"</code>.
 +++
 |===
 
@@ -629,10 +662,31 @@ Add an enabled cipher suite
 +++
 Add an enabled SSL/TLS protocols
 +++
-|[[h2cUpgrade]]`h2cUpgrade`|`Boolean`|
+|[[http2ClearTextUpgrade]]`http2ClearTextUpgrade`|`Boolean`|
 +++
 Set to <code>true</code> when an <i>h2c</i> connection is established using an HTTP/1.1 upgrade request, and <code>false</code>
  when an <i>h2c</i> connection is established directly (with prior knowledge).
++++
+|[[http2ConnectionWindowSize]]`http2ConnectionWindowSize`|`Number (int)`|
++++
+Set the default HTTP/2 connection window size. It overrides the initial window
+ size set by link, so the connection window size
+ is greater than for its streams, in order the data throughput.
+ <p/>
+ A value of <code>-1</code> reuses the initial window size setting.
++++
+|[[http2MaxPoolSize]]`http2MaxPoolSize`|`Number (int)`|
++++
+Set the maximum pool size for HTTP/2 connections
++++
+|[[http2MultiplexingLimit]]`http2MultiplexingLimit`|`Number (int)`|
++++
+Set a client limit of the number concurrent streams for each HTTP/2 connection, this limits the number
+ of streams the client can create for a connection. The effective number of streams for a
+ connection is the min of this value and the server's initial settings.
+ <p/>
+ Setting the value to <code>-1</code> means to use the value sent by the server's initial settings.
+ <code>-1</code> is the default value.
 +++
 |[[idleTimeout]]`idleTimeout`|`Number (int)`|
 +++
@@ -643,6 +697,7 @@ Set the idle timeout, in seconds. zero means don't timeout.
 +++
 Set the HTTP/2 connection settings immediately sent by to the server when the client connects.
 +++
+|[[jdkSslEngineOptions]]`jdkSslEngineOptions`|`link:dataobjects.html#JdkSSLEngineOptions[JdkSSLEngineOptions]`|-
 |[[keepAlive]]`keepAlive`|`Boolean`|
 +++
 Set whether keep alive is enabled on the client
@@ -650,6 +705,10 @@ Set whether keep alive is enabled on the client
 |[[keyStoreOptions]]`keyStoreOptions`|`link:dataobjects.html#JksOptions[JksOptions]`|
 +++
 Set the key/cert options in jks format, aka Java keystore.
++++
+|[[logActivity]]`logActivity`|`Boolean`|
++++
+Set to true to enabled network activity logging: Netty's pipeline is configured for logging on Netty's logger.
 +++
 |[[maxChunkSize]]`maxChunkSize`|`Number (int)`|
 +++
@@ -673,6 +732,7 @@ Set the max websocket frame size
 Set the metrics name identifying the reported metrics, useful for grouping metrics
  with the same name.
 +++
+|[[openSslEngineOptions]]`openSslEngineOptions`|`link:dataobjects.html#OpenSSLEngineOptions[OpenSSLEngineOptions]`|-
 |[[pemKeyCertOptions]]`pemKeyCertOptions`|`link:dataobjects.html#PemKeyCertOptions[PemKeyCertOptions]`|
 +++
 Set the key/cert store options in pem format.
@@ -693,25 +753,17 @@ Set the trust options in pfx format
 +++
 Set whether pipe-lining is enabled on the client
 +++
+|[[pipeliningLimit]]`pipeliningLimit`|`Number (int)`|
++++
+Set the limit of pending requests a pipe-lined HTTP/1 connection can send.
++++
 |[[protocolVersion]]`protocolVersion`|`link:enums.html#HttpVersion[HttpVersion]`|
 +++
 Set the protocol version.
 +++
-|[[proxyHost]]`proxyHost`|`String`|
+|[[proxyOptions]]`proxyOptions`|`link:dataobjects.html#ProxyOptions[ProxyOptions]`|
 +++
-Set proxy hostname for ssl connections via CONNECT proxy (e.g. Squid).
-+++
-|[[proxyPassword]]`proxyPassword`|`String`|
-+++
-Set proxy password for ssl connections
-+++
-|[[proxyPort]]`proxyPort`|`Number (int)`|
-+++
-Set proxy port for ssl connections
-+++
-|[[proxyUsername]]`proxyUsername`|`String`|
-+++
-Set proxy username for ssl connections
+Set proxy options for connections via CONNECT proxy (e.g. Squid) or a SOCKS proxy.
 +++
 |[[receiveBufferSize]]`receiveBufferSize`|`Number (int)`|
 +++
@@ -732,10 +784,6 @@ Set whether SO_linger keep alive is enabled
 |[[ssl]]`ssl`|`Boolean`|
 +++
 Set whether SSL/TLS is enabled
-+++
-|[[sslEngine]]`sslEngine`|`link:enums.html#SSLEngine[SSLEngine]`|
-+++
-Set to use SSL engine implementation to use.
 +++
 |[[tcpKeepAlive]]`tcpKeepAlive`|`Boolean`|
 +++
@@ -831,6 +879,14 @@ Set whether 100 Continue should be handled automatically
 +++
 Set the host
 +++
+|[[http2ConnectionWindowSize]]`http2ConnectionWindowSize`|`Number (int)`|
++++
+Set the default HTTP/2 connection window size. It overrides the initial window
+ size set by link, so the connection window size
+ is greater than for its streams, in order the data throughput.
+ <p/>
+ A value of <code>-1</code> reuses the initial window size setting.
++++
 |[[idleTimeout]]`idleTimeout`|`Number (int)`|
 +++
 Set the idle timeout, in seconds. zero means don't timeout.
@@ -840,9 +896,14 @@ Set the idle timeout, in seconds. zero means don't timeout.
 +++
 Set the HTTP/2 connection settings immediatly sent by the server when a client connects.
 +++
+|[[jdkSslEngineOptions]]`jdkSslEngineOptions`|`link:dataobjects.html#JdkSSLEngineOptions[JdkSSLEngineOptions]`|-
 |[[keyStoreOptions]]`keyStoreOptions`|`link:dataobjects.html#JksOptions[JksOptions]`|
 +++
 Set the key/cert options in jks format, aka Java keystore.
++++
+|[[logActivity]]`logActivity`|`Boolean`|
++++
+Set to true to enabled network activity logging: Netty's pipeline is configured for logging on Netty's logger.
 +++
 |[[maxChunkSize]]`maxChunkSize`|`Number (int)`|
 +++
@@ -860,6 +921,7 @@ Set the maximum length of the initial line for HTTP/1.x (e.g. <code>"GET / HTTP/
 +++
 Set the maximum websocket frames size
 +++
+|[[openSslEngineOptions]]`openSslEngineOptions`|`link:dataobjects.html#OpenSSLEngineOptions[OpenSSLEngineOptions]`|-
 |[[pemKeyCertOptions]]`pemKeyCertOptions`|`link:dataobjects.html#PemKeyCertOptions[PemKeyCertOptions]`|
 +++
 Set the key/cert store options in pem format.
@@ -900,10 +962,6 @@ Set whether SO_linger keep alive is enabled
 +++
 Set whether SSL/TLS is enabled
 +++
-|[[sslEngine]]`sslEngine`|`link:enums.html#SSLEngine[SSLEngine]`|
-+++
-Set to use SSL engine implementation to use.
-+++
 |[[tcpKeepAlive]]`tcpKeepAlive`|`Boolean`|
 +++
 Set whether TCP keep alive is enabled
@@ -931,6 +989,24 @@ Set whether Netty pooled buffers are enabled
 |[[websocketSubProtocols]]`websocketSubProtocols`|`String`|
 +++
 Set the websocket subprotocols supported by the server.
++++
+|===
+
+[[JdkSSLEngineOptions]]
+== JdkSSLEngineOptions
+
+++++
+ Configures a link to use the JDK ssl engine implementation.
+++++
+'''
+
+[cols=">25%,^25%,50%"]
+[frame="topbot"]
+|===
+^|Name | Type ^| Description
+|[[alpnAvailable]]`alpnAvailable`|`Boolean`|
++++
+@return if alpn support is available via the JDK SSL engine
 +++
 |===
 
@@ -1039,15 +1115,21 @@ Set the hostname verification algorithm interval
 Set the idle timeout, in seconds. zero means don't timeout.
  This determines if a connection will timeout and be closed if no data is received within the timeout.
 +++
+|[[jdkSslEngineOptions]]`jdkSslEngineOptions`|`link:dataobjects.html#JdkSSLEngineOptions[JdkSSLEngineOptions]`|-
 |[[keyStoreOptions]]`keyStoreOptions`|`link:dataobjects.html#JksOptions[JksOptions]`|
 +++
 Set the key/cert options in jks format, aka Java keystore.
++++
+|[[logActivity]]`logActivity`|`Boolean`|
++++
+Set to true to enabled network activity logging: Netty's pipeline is configured for logging on Netty's logger.
 +++
 |[[metricsName]]`metricsName`|`String`|
 +++
 Set the metrics name identifying the reported metrics, useful for grouping metrics
  with the same name.
 +++
+|[[openSslEngineOptions]]`openSslEngineOptions`|`link:dataobjects.html#OpenSSLEngineOptions[OpenSSLEngineOptions]`|-
 |[[pemKeyCertOptions]]`pemKeyCertOptions`|`link:dataobjects.html#PemKeyCertOptions[PemKeyCertOptions]`|
 +++
 Set the key/cert store options in pem format.
@@ -1063,6 +1145,10 @@ Set the key/cert options in pfx format.
 |[[pfxTrustOptions]]`pfxTrustOptions`|`link:dataobjects.html#PfxOptions[PfxOptions]`|
 +++
 Set the trust options in pfx format
++++
+|[[proxyOptions]]`proxyOptions`|`link:dataobjects.html#ProxyOptions[ProxyOptions]`|
++++
+Set proxy options for connections via CONNECT proxy (e.g. Squid) or a SOCKS proxy.
 +++
 |[[receiveBufferSize]]`receiveBufferSize`|`Number (int)`|
 +++
@@ -1091,10 +1177,6 @@ Set whether SO_linger keep alive is enabled
 |[[ssl]]`ssl`|`Boolean`|
 +++
 Set whether SSL/TLS is enabled
-+++
-|[[sslEngine]]`sslEngine`|`link:enums.html#SSLEngine[SSLEngine]`|
-+++
-Set to use SSL engine implementation to use.
 +++
 |[[tcpKeepAlive]]`tcpKeepAlive`|`Boolean`|
 +++
@@ -1175,10 +1257,16 @@ Set the host
 Set the idle timeout, in seconds. zero means don't timeout.
  This determines if a connection will timeout and be closed if no data is received within the timeout.
 +++
+|[[jdkSslEngineOptions]]`jdkSslEngineOptions`|`link:dataobjects.html#JdkSSLEngineOptions[JdkSSLEngineOptions]`|-
 |[[keyStoreOptions]]`keyStoreOptions`|`link:dataobjects.html#JksOptions[JksOptions]`|
 +++
 Set the key/cert options in jks format, aka Java keystore.
 +++
+|[[logActivity]]`logActivity`|`Boolean`|
++++
+Set to true to enabled network activity logging: Netty's pipeline is configured for logging on Netty's logger.
++++
+|[[openSslEngineOptions]]`openSslEngineOptions`|`link:dataobjects.html#OpenSSLEngineOptions[OpenSSLEngineOptions]`|-
 |[[pemKeyCertOptions]]`pemKeyCertOptions`|`link:dataobjects.html#PemKeyCertOptions[PemKeyCertOptions]`|
 +++
 Set the key/cert store options in pem format.
@@ -1219,10 +1307,6 @@ Set whether SO_linger keep alive is enabled
 +++
 Set whether SSL/TLS is enabled
 +++
-|[[sslEngine]]`sslEngine`|`link:enums.html#SSLEngine[SSLEngine]`|
-+++
-Set to use SSL engine implementation to use.
-+++
 |[[tcpKeepAlive]]`tcpKeepAlive`|`Boolean`|
 +++
 Set whether TCP keep alive is enabled
@@ -1261,6 +1345,10 @@ Set whether Netty pooled buffers are enabled
 [frame="topbot"]
 |===
 ^|Name | Type ^| Description
+|[[logActivity]]`logActivity`|`Boolean`|
++++
+Set to true to enabled network activity logging: Netty's pipeline is configured for logging on Netty's logger.
++++
 |[[receiveBufferSize]]`receiveBufferSize`|`Number (int)`|
 +++
 Set the TCP receive buffer size
@@ -1330,6 +1418,32 @@ Set whether the file should be truncated to zero length on opening if it exists 
 |[[write]]`write`|`Boolean`|
 +++
 Set whether the file is to be opened for writing
++++
+|===
+
+[[OpenSSLEngineOptions]]
+== OpenSSLEngineOptions
+
+++++
+ Configures a link to use OpenSsl.
+++++
+'''
+
+[cols=">25%,^25%,50%"]
+[frame="topbot"]
+|===
+^|Name | Type ^| Description
+|[[alpnAvailable]]`alpnAvailable`|`Boolean`|
++++
+@return when alpn support is available via OpenSSL engine
++++
+|[[available]]`available`|`Boolean`|
++++
+@return when OpenSSL is available
++++
+|[[sessionCacheEnabled]]`sessionCacheEnabled`|`Boolean`|
++++
+Set whether session cache is enabled in open SSL session server context
 +++
 |===
 
@@ -1571,6 +1685,42 @@ Set the store as a buffer
 +++
 |===
 
+[[ProxyOptions]]
+== ProxyOptions
+
+++++
+ Proxy options for a net client or a net client.
+++++
+'''
+
+[cols=">25%,^25%,50%"]
+[frame="topbot"]
+|===
+^|Name | Type ^| Description
+|[[host]]`host`|`String`|
++++
+Set proxy host.
++++
+|[[password]]`password`|`String`|
++++
+Set proxy password.
++++
+|[[port]]`port`|`Number (int)`|
++++
+Set proxy port.
++++
+|[[type]]`type`|`link:enums.html#ProxyType[ProxyType]`|
++++
+Set proxy type.
+
+ <p>ProxyType can be HTTP, SOCKS4 and SOCKS5
++++
+|[[username]]`username`|`String`|
++++
+Set proxy username.
++++
+|===
+
 [[TCPSSLOptions]]
 == TCPSSLOptions
 
@@ -1604,10 +1754,16 @@ Add an enabled SSL/TLS protocols
 Set the idle timeout, in seconds. zero means don't timeout.
  This determines if a connection will timeout and be closed if no data is received within the timeout.
 +++
+|[[jdkSslEngineOptions]]`jdkSslEngineOptions`|`link:dataobjects.html#JdkSSLEngineOptions[JdkSSLEngineOptions]`|-
 |[[keyStoreOptions]]`keyStoreOptions`|`link:dataobjects.html#JksOptions[JksOptions]`|
 +++
 Set the key/cert options in jks format, aka Java keystore.
 +++
+|[[logActivity]]`logActivity`|`Boolean`|
++++
+Set to true to enabled network activity logging: Netty's pipeline is configured for logging on Netty's logger.
++++
+|[[openSslEngineOptions]]`openSslEngineOptions`|`link:dataobjects.html#OpenSSLEngineOptions[OpenSSLEngineOptions]`|-
 |[[pemKeyCertOptions]]`pemKeyCertOptions`|`link:dataobjects.html#PemKeyCertOptions[PemKeyCertOptions]`|
 +++
 Set the key/cert store options in pem format.
@@ -1643,10 +1799,6 @@ Set whether SO_linger keep alive is enabled
 |[[ssl]]`ssl`|`Boolean`|
 +++
 Set whether SSL/TLS is enabled
-+++
-|[[sslEngine]]`sslEngine`|`link:enums.html#SSLEngine[SSLEngine]`|
-+++
-Set to use SSL engine implementation to use.
 +++
 |[[tcpKeepAlive]]`tcpKeepAlive`|`Boolean`|
 +++
@@ -1686,6 +1838,10 @@ Set whether Netty pooled buffers are enabled
 [frame="topbot"]
 |===
 ^|Name | Type ^| Description
+|[[addressResolverOptions]]`addressResolverOptions`|`link:dataobjects.html#AddressResolverOptions[AddressResolverOptions]`|
++++
+Sets the address resolver configuration to configure resolving DNS servers, cache TTL, etc...
++++
 |[[blockedThreadCheckInterval]]`blockedThreadCheckInterval`|`Number (long)`|
 +++
 Sets the value of blocked thread check period, in ms.
@@ -1737,10 +1893,6 @@ Set whether HA will be enabled on the Vert.x instance.
 |[[haGroup]]`haGroup`|`String`|
 +++
 Set the HA group to be used when HA is enabled.
-+++
-|[[hostnameResolverOptions]]`hostnameResolverOptions`|`link:dataobjects.html#HostnameResolverOptions[HostnameResolverOptions]`|
-+++
-Sets the hostname resolver configuration to configure resolving DNS servers, cache TTL, etc...
 +++
 |[[internalBlockingPoolSize]]`internalBlockingPoolSize`|`Number (int)`|
 +++
