--- a/src/main/asciidoc/js/filesystem.adoc
+++ b/src/main/asciidoc/js/filesystem.adoc
@@ -1,8 +1,8 @@
 == Using the file system with Vert.x
 
-The Vert.x `link:../../jsdoc/file_system-FileSystem.html[FileSystem]` object provides many operations for manipulating the file system.
+The Vert.x `link:../../jsdoc/module-vertx-js_file_system-FileSystem.html[FileSystem]` object provides many operations for manipulating the file system.
 
-There is one file system object per Vert.x instance, and you obtain it with  `link:../../jsdoc/vertx-Vertx.html#fileSystem[fileSystem]`.
+There is one file system object per Vert.x instance, and you obtain it with  `link:../../jsdoc/module-vertx-js_vertx-Vertx.html#fileSystem[fileSystem]`.
 
 A blocking and a non blocking version of each operation is provided. The non blocking versions take a handler
 which is called when the operation completes or an error occurs.
@@ -40,7 +40,7 @@ fs.copyBlocking("foo.txt", "bar.txt");
 ----
 
 Many operations exist to copy, move, truncate, chmod and many other file operations. We won't list them all here,
-please consult the `link:../../jsdoc/file_system-FileSystem.html[API docs]` for the full list.
+please consult the `link:../../jsdoc/module-vertx-js_file_system-FileSystem.html[API docs]` for the full list.
 
 Let's see a couple of examples using asynchronous methods:
 
@@ -94,7 +94,7 @@ vertx.fileSystem().exists("target/classes/junk.txt", function (result, result_er
 
 Vert.x provides an asynchronous file abstraction that allows you to manipulate a file on the file system.
 
-You open an `link:../../jsdoc/async_file-AsyncFile.html[AsyncFile]` as follows:
+You open an `link:../../jsdoc/module-vertx-js_async_file-AsyncFile.html[AsyncFile]` as follows:
 
 [source,js]
 ----
@@ -118,7 +118,7 @@ They also allow you to read and write directly to them.
 ==== Random access writes
 
 To use an `AsyncFile` for random access writing you use the
-`link:../../jsdoc/async_file-AsyncFile.html#write[write]` method.
+`link:../../jsdoc/module-vertx-js_async_file-AsyncFile.html#write[write]` method.
 
 The parameters to the method are:
 
@@ -159,7 +159,7 @@ vertx.fileSystem().open("target/classes/hello.txt", {
 ==== Random access reads
 
 To use an `AsyncFile` for random access reads you use the
-`link:../../jsdoc/async_file-AsyncFile.html#read[read]`
+`link:../../jsdoc/module-vertx-js_async_file-AsyncFile.html#read[read]`
 method.
 
 The parameters to the method are:
@@ -216,7 +216,7 @@ close or when the JVM is shutdown with `link:../dataobjects.html#OpenOptions#set
 
 In the `OpenOptions`, you can enable/disable the automatic synchronisation of the content on every write using
 `link:../dataobjects.html#OpenOptions#setDsync[dsync]`. In that case, you can manually flush any writes from the OS
-cache by calling the `link:../../jsdoc/async_file-AsyncFile.html#flush[flush]` method.
+cache by calling the `link:../../jsdoc/module-vertx-js_async_file-AsyncFile.html#flush[flush]` method.
 
 This method can also be called with an handler which will be called when the flush is complete.
 
@@ -280,5 +280,5 @@ these properties should be set before loading this class or as a JVM system prop
 
 ==== Closing an AsyncFile
 
-To close an `AsyncFile` call the `link:../../jsdoc/async_file-AsyncFile.html#close[close]` method. Closing is asynchronous and
+To close an `AsyncFile` call the `link:../../jsdoc/module-vertx-js_async_file-AsyncFile.html#close[close]` method. Closing is asynchronous and
 if you want to be notified when the close has been completed you can specify a handler function as an argument.
