--- a/src/main/asciidoc/js/index.adoc
+++ b/src/main/asciidoc/js/index.adoc
@@ -41,7 +41,7 @@ Let's discuss the different concepts and features in core.
 
 NOTE: Much of this is Java specific - need someway of swapping in language specific parts
 
-You can't do much in Vert.x-land unless you can commune with a `link:../../jsdoc/vertx-Vertx.html[Vertx]` object!
+You can't do much in Vert.x-land unless you can commune with a `link:../../jsdoc/module-vertx-js_vertx-Vertx.html[Vertx]` object!
 
 It's the control centre of Vert.x and is how you do pretty much everything, including creating clients and servers,
 getting a reference to the event bus, setting timers, as well as many other things.
@@ -277,7 +277,7 @@ blocking APIs safely within a Vert.x application.
 As discussed before, you can't call blocking operations directly from an event loop, as that would prevent it
 from doing any other useful work. So how can you do this?
 
-It's done by calling `link:../../jsdoc/vertx-Vertx.html#executeBlocking[executeBlocking]` specifying both the blocking code to execute and a
+It's done by calling `link:../../jsdoc/module-vertx-js_vertx-Vertx.html#executeBlocking[executeBlocking]` specifying both the blocking code to execute and a
 result handler to be called back asynchronous when the blocking code has been executed.
 
 [source,js]
@@ -296,7 +296,7 @@ vertx.executeBlocking(function (future) {
 By default, if executeBlocking is called several times from the same context (e.g. the same verticle instance) then
 the different executeBlocking are executed _serially_ (i.e. one after another).
 
-If you don't care about ordering you can call `link:../../jsdoc/vertx-Vertx.html#executeBlocking[executeBlocking]`
+If you don't care about ordering you can call `link:../../jsdoc/module-vertx-js_vertx-Vertx.html#executeBlocking[executeBlocking]`
 specifying `false` as the argument to `ordered`. In this case any executeBlocking may be executed in parallel
 on the worker pool.
 
@@ -311,7 +311,7 @@ Additional pools can be created for different purposes:
 [source,js]
 ----
 var someAPI = new (Java.type("examples.CoreExamples.BlockingAPI"))();
-var executor = vertx.createWorkerExecutor("my-worker-pool");
+var executor = vertx.createSharedWorkerExecutor("my-worker-pool");
 executor.executeBlocking(function (future) {
   // Call some blocking API that takes a significant amount of time to return
   var result = someAPI.blockingMethod("hello");
@@ -347,7 +347,7 @@ var poolSize = 10;
 // 2 minutes
 var maxExecuteTime = 120000;
 
-var executor = vertx.createWorkerExecutor("my-worker-pool", poolSize, maxExecuteTime);
+var executor = vertx.createSharedWorkerExecutor("my-worker-pool", poolSize, maxExecuteTime);
 
 ----
 
@@ -355,9 +355,9 @@ NOTE: the configuration is set when the worker pool is created
 
 == Async coordination
 
-Coordination of multiple asynchronous results can be achieved with Vert.x `link:../../jsdoc/future-Future.html[futures]`.
+Coordination of multiple asynchronous results can be achieved with Vert.x `link:../../jsdoc/module-vertx-js_future-Future.html[futures]`.
 
-`link:../../jsdoc/composite_future-CompositeFuture.html#all[CompositeFuture.all]` takes several futures arguments (up to 6) and returns a future that is
+`link:../../jsdoc/module-vertx-js_composite_future-CompositeFuture.html#all[CompositeFuture.all]` takes several futures arguments (up to 6) and returns a future that is
 _succeeded_ when all the futures are and _failed_ otherwise:
 
 [source,js]
@@ -380,9 +380,9 @@ CompositeFuture.all(httpServerFuture, netServerFuture).setHandler(function (ar, 
 
 ----
 
-The handler returned by `link:../../jsdoc/future-Future.html#completer[completer]` completes the future.
+The handler returned by `link:../../jsdoc/module-vertx-js_future-Future.html#completer[completer]` completes the future.
 
-`link:../../jsdoc/composite_future-CompositeFuture.html#any[CompositeFuture.any]` takes several futures arguments (up to 6) and returns a future that is
+`link:../../jsdoc/module-vertx-js_composite_future-CompositeFuture.html#any[CompositeFuture.any]` takes several futures arguments (up to 6) and returns a future that is
 _succeeded_ if one of the futures is, and _failed_ otherwise:
 
 [source,js]
@@ -401,7 +401,7 @@ CompositeFuture.any(future1, future2).setHandler(function (ar, ar_err) {
 
 ----
 
-`link:../../jsdoc/future-Future.html#compose[compose]` can be used for chaining futures:
+`link:../../jsdoc/module-vertx-js_future-Future.html#compose[compose]` can be used for chaining futures:
 
 [source,js]
 ----
@@ -512,7 +512,7 @@ using standard Java techniques for multi-threaded programming.
 
 === Deploying verticles programmatically
 
-You can deploy a verticle using one of the `link:../../jsdoc/vertx-Vertx.html#deployVerticle[deployVerticle]` method, specifying a verticle
+You can deploy a verticle using one of the `link:../../jsdoc/module-vertx-js_vertx-Vertx.html#deployVerticle[deployVerticle]` method, specifying a verticle
 name or you can pass in a verticle instance you have already created yourself.
 
 NOTE: Deploying Verticle *instances* is Java only.
@@ -575,8 +575,8 @@ and instantiate that.
 
 Most Verticle factories are loaded from the classpath and registered at Vert.x startup.
 
-You can also programmatically register and unregister verticle factories using `link:../../jsdoc/vertx-Vertx.html#registerVerticleFactory[registerVerticleFactory]`
-and `link:../../jsdoc/vertx-Vertx.html#unregisterVerticleFactory[unregisterVerticleFactory]` if you wish.
+You can also programmatically register and unregister verticle factories using `link:../../jsdoc/module-vertx-js_vertx-Vertx.html#registerVerticleFactory[registerVerticleFactory]`
+and `link:../../jsdoc/module-vertx-js_vertx-Vertx.html#unregisterVerticleFactory[unregisterVerticleFactory]` if you wish.
 
 === Waiting for deployment to complete
 
@@ -602,7 +602,7 @@ This deployment ID can be used later if you want to undeploy the deployment.
 
 === Undeploying verticle deployments
 
-Deployments can be undeployed with `link:../../jsdoc/vertx-Vertx.html#undeploy[undeploy]`.
+Deployments can be undeployed with `link:../../jsdoc/module-vertx-js_vertx-Vertx.html#undeploy[undeploy]`.
 
 Un-deployment is itself asynchronous so if you want to be notified when un-deployment is complete you can deploy specifying a completion handler:
 
@@ -734,7 +734,7 @@ type `vertx` at the command line.
 
 Threads maintained by Vert.x instances are not daemon threads so they will prevent the JVM from exiting.
 
-If you are embedding Vert.x and you have finished with it, you can call `link:../../jsdoc/vertx-Vertx.html#close[close]` to close it
+If you are embedding Vert.x and you have finished with it, you can call `link:../../jsdoc/module-vertx-js_vertx-Vertx.html#close[close]` to close it
 down.
 
 This will shut-down all internal thread pools and close other resources, and will allow the JVM to exit.
@@ -747,7 +747,7 @@ When Vert.x provides an event to a handler or calls the start or stop methods of
 on that exact same event loop thread. In the case of worker verticles and running inline blocking code a
 worker context will be associated with the execution which will use a thread from the worker thread pool.
 
-To retrieve the context, use the `link:../../jsdoc/vertx-Vertx.html#getOrCreateContext[getOrCreateContext]` method:
+To retrieve the context, use the `link:../../jsdoc/module-vertx-js_vertx-Vertx.html#getOrCreateContext[getOrCreateContext]` method:
 
 [source, js]
 ----
@@ -787,7 +787,7 @@ vertx.getOrCreateContext().runOnContext(function (v) {
 
 When several handlers run in the same context, they may want to share data. The context object offers methods to
 store and retrieve data shared in the context. For instance, it lets you pass data to some action run with
-`link:../../jsdoc/context-Context.html#runOnContext[runOnContext]`:
+`link:../../jsdoc/module-vertx-js_context-Context.html#runOnContext[runOnContext]`:
 
 [source, js]
 ----
@@ -799,7 +799,7 @@ context.runOnContext(function (v) {
 
 ----
 
-The context object also let you access verticle configuration using the `link:../../jsdoc/context-Context.html#config[config]`
+The context object also let you access verticle configuration using the `link:../../jsdoc/module-vertx-js_context-Context.html#config[config]`
 method. Check the <<Passing configuration to a verticle>> section for more details about this configuration.
 
 === Executing periodic and delayed actions
@@ -814,7 +814,7 @@ Instead you use Vert.x timers. Timers can be *one-shot* or *periodic*. We'll dis
 
 A one shot timer calls an event handler after a certain delay, expressed in milliseconds.
 
-To set a timer to fire once you use `link:../../jsdoc/vertx-Vertx.html#setTimer[setTimer]` method passing in the delay and a handler
+To set a timer to fire once you use `link:../../jsdoc/module-vertx-js_vertx-Vertx.html#setTimer[setTimer]` method passing in the delay and a handler
 
 [source,js]
 ----
@@ -830,7 +830,7 @@ The return value is a unique timer id which can later be used to cancel the time
 
 ==== Periodic Timers
 
-You can also set a timer to fire periodically by using `link:../../jsdoc/vertx-Vertx.html#setPeriodic[setPeriodic]`.
+You can also set a timer to fire periodically by using `link:../../jsdoc/module-vertx-js_vertx-Vertx.html#setPeriodic[setPeriodic]`.
 
 There will be an initial delay equal to the period.
 
@@ -841,7 +841,7 @@ The argument passed into the timer event handler is also the unique timer id:
 Keep in mind that the timer will fire on a periodic basis. If your periodic treatment takes a long amount of time to proceed,
 your timer events could run continuously or even worse : stack up.
 
-In this case, you should consider using `link:../../jsdoc/vertx-Vertx.html#setTimer[setTimer]` instead. Once your treatment has
+In this case, you should consider using `link:../../jsdoc/module-vertx-js_vertx-Vertx.html#setTimer[setTimer]` instead. Once your treatment has
 finished, you can set the next timer.
 
 [source,js]
@@ -856,7 +856,7 @@ console.log("First this is printed");
 
 ==== Cancelling timers
 
-To cancel a periodic timer, call `link:../../jsdoc/vertx-Vertx.html#cancelTimer[cancelTimer]` specifying the timer id. For example:
+To cancel a periodic timer, call `link:../../jsdoc/module-vertx-js_vertx-Vertx.html#cancelTimer[cancelTimer]` specifying the timer id. For example:
 
 [source,js]
 ----
@@ -871,7 +871,7 @@ when the verticle is undeployed.
 
 === Verticle worker pool
 
-Verticle use the Vert.x worker pool for executing blocking actions, i.e `link:../../jsdoc/context-Context.html#executeBlocking[executeBlocking]` or
+Verticle use the Vert.x worker pool for executing blocking actions, i.e `link:../../jsdoc/module-vertx-js_context-Context.html#executeBlocking[executeBlocking]` or
 worker verticle.
 
 A different worker pool can be specified in deployment options:
@@ -913,8 +913,8 @@ include::parsetools.adoc[]
 Most Vert.x objects are safe to access from different threads. _However_ performance is optimised when they are
 accessed from the same context they were created from.
 
-For example if you have deployed a verticle which creates a `link:../../jsdoc/net_server-NetServer.html[NetServer]` which provides
-`link:../../jsdoc/net_socket-NetSocket.html[NetSocket]` instances in it's handler, then it's best to always access that socket instance
+For example if you have deployed a verticle which creates a `link:../../jsdoc/module-vertx-js_net_server-NetServer.html[NetServer]` which provides
+`link:../../jsdoc/module-vertx-js_net_socket-NetSocket.html[NetSocket]` instances in it's handler, then it's best to always access that socket instance
 from the event loop of the verticle.
 
 If you stick to the standard Vert.x verticle deployment model and avoid sharing objects between verticles then this
@@ -926,6 +926,9 @@ By default Vert.x does not record any metrics. Instead it provides an SPI for ot
 to the classpath. The metrics SPI is an advanced feature which allows implementers to capture events from Vert.x in
 order to gather metrics. For more information on this, please consult the
 `API Documentation`.
+
+You can also specify a metrics factory programmatically if embedding Vert.x using
+`link:../dataobjects.html#MetricsOptions#setFactory[factory]`.
 
 == OSGi
 
@@ -1349,12 +1352,12 @@ logger.error("oops!", exception);
 
 ----
 
-== Hostname resolution
+== Host name resolution
 
-Vert.x uses an an hostname resolver for resolving hostname into IP addresses instead of
+Vert.x uses an an address resolver for resolving host name into IP addresses instead of
 the JVM built-in blocking resolver.
 
-An hostname are resolve to an IP address using:
+An host name resolves to an IP address using:
 
 - the _hosts_ file of the operating system
 - otherwise DNS queries against a list of servers
@@ -1362,13 +1365,13 @@ An hostname are resolve to an IP address using:
 By default it will use the list of the system DNS server addresses from the environment, if that list cannot be
 retrieved it will use Google's public DNS servers `"8.8.8.8"` and `"8.8.4.4"`.
 
-DNS servers can be also configured when creating a `link:../../jsdoc/vertx-Vertx.html[Vertx]` instance:
+DNS servers can be also configured when creating a `link:../../jsdoc/module-vertx-js_vertx-Vertx.html[Vertx]` instance:
 
 [source,js]
 ----
 var Vertx = require("vertx-js/vertx");
 var vertx = Vertx.vertx({
-  "hostnameResolverOptions" : {
+  "addressResolverOptions" : {
     "servers" : [
       "192.168.0.1",
       "192.168.0.2:40000"
@@ -1380,6 +1383,19 @@ var vertx = Vertx.vertx({
 
 The default port of a DNS server is `53`, when a server uses a different port, this port can be set
 using a colon delimiter: `192.168.0.2:40000`.
+
+The resolver can be configured to use an alternative _hosts_ file:
+
+[source,js]
+----
+var Vertx = require("vertx-js/vertx");
+var vertx = Vertx.vertx({
+  "addressResolverOptions" : {
+    "hostsPath" : "/path/to/hosts"
+  }
+});
+
+----
 
 == High Availability and Fail-Over
 
@@ -1642,3 +1658,15 @@ overriding `afterStartingVertx`
 `getDefaultCommand`
 * add / remove commands using `register`
 and `unregister`
+
+=== Launcher and exit code
+
+When you use the `Launcher` class as main class, it uses the following exit code:
+
+* `0` if the process ends smoothly, or if an uncaught error is thrown
+* `1` for general purpose error
+* `11` if Vert.x cannot be initialized
+* `12` if a spawn process cannot be started, found or stopped. This error code is used by the `start` and
+`stop` command
+* `14` if the system configuration is not meeting the system requirement (shc as java not found)
+* `15` if the main verticle cannot be deployed
