--- a/src/main/asciidoc/js/index.adoc
+++ b/src/main/asciidoc/js/index.adoc
@@ -1415,6 +1415,29 @@ var vertx = Vertx.vertx({
 
 ----
 
+By default the resolver will use the system DNS search domains from the environment. Alternatively an explicit search domain
+list can be provided:
+
+[source,js]
+----
+var Vertx = require("vertx-js/vertx");
+var vertx = Vertx.vertx({
+  "addressResolverOptions" : {
+    "searchDomains" : [
+      "foo.com",
+      "bar.com"
+    ]
+  }
+});
+
+----
+
+When a search domain list is used, the threshold for the number of dots is `1`, it can be configured with
+`link:../dataobjects.html#AddressResolverOptions#setNdots[ndots]`.
+
+NOTE: sometimes it can be desirable to use the JVM built-in resolver, the JVM system property
+_-Dvertx.disableDnsResolver=true_ activates this behavior
+
 == High Availability and Fail-Over
 
 Vert.x allows you to run your verticles with high availability (HA) support. In that case, when a vert.x
